# spacy-playground

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
spacy_playground/chapitre1/: __init__.py  attributs_lexicaux.py  documents_spans_et_tokens.py  pipelines_spacy.py  prise_en_main.py  regles.py
spacy_playground/chapitre2/: __init__.py  chaines_de_caracteres.py  data_structures.py  doc_spans_tokens.py  predictions_et_regles.py  vecteurs_de_mots_et_similarite_semantique.py
spacy_playground/chapitre3/: __init__.py  attributs_etendus.py  composants.py  composants_avec_extensions.py  entites_et_extensions.py  flux_avec_contexte.py  scalabilite_et_performance.py  traitement_de_flux.py  traitement_selectif.py  traitements_de_textes_en_pipelines.py
spacy_playground/chapitre4/: WRAPPING_UP.md  __init__.py  bonnes_pratiques.py  config.cfg  configuration_et_entrainement.py  creation_donnees_entrainement.py  entrainement_avec_plusieurs_labels.py  entrainement_et_actualisation.py  entrainement_sur_plusieurs_labels.py  experiments_on_matcher.py  spacy_2_iob.py
tests/: test_advanced.py  test_basic.py  test_sample.py
