[tool.poetry]
name = "spacy-playground"
version = "0.1.0"
description = ""
authors = ["Derfulio <36664091+Derfulio@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "spacy_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
